common/lib/sandbox-packages/hint/hint_class_helpers/expr_parser/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> expression
Rule 2     statement -> factor
Rule 3     statement -> list
Rule 4     expression -> expression PLUS factor
Rule 5     expression -> factor PLUS factor
Rule 6     expression -> expression MINUS factor
Rule 7     expression -> factor MINUS factor
Rule 8     factor -> factor TIMES factor
Rule 9     factor -> factor DIVIDE factor
Rule 10    factor -> factor EXP factor
Rule 11    factor -> factor factor
Rule 12    factor -> MINUS factor
Rule 13    factor -> factor FACTORIAL
Rule 14    factor -> CHOOSE LPAREN list RPAREN
Rule 15    factor -> PERMUTE LPAREN list RPAREN
Rule 16    factor -> Q LPAREN factor RPAREN
Rule 17    factor -> Q LPAREN expression RPAREN
Rule 18    factor -> LPAREN expression RPAREN
Rule 19    factor -> LBRACKET expression RBRACKET
Rule 20    factor -> LPAREN factor RPAREN
Rule 21    factor -> LBRACKET factor RBRACKET
Rule 22    factor -> COMPUTE LPAREN expression RPAREN
Rule 23    factor -> COMPUTE LPAREN factor RPAREN
Rule 24    factor -> LPAREN expression
Rule 25    factor -> LBRACKET expression
Rule 26    factor -> LPAREN factor
Rule 27    factor -> LBRACKET factor
Rule 28    factor -> CHOOSE LPAREN list
Rule 29    factor -> PERMUTE LPAREN list
Rule 30    factor -> LSET list RSET
Rule 31    factor -> LSET expression RSET
Rule 32    factor -> LSET RSET
Rule 33    factor -> LPAREN list RPAREN
Rule 34    list -> expression COMMA
Rule 35    list -> list expression COMMA
Rule 36    list -> list expression
Rule 37    list -> factor COMMA
Rule 38    list -> list factor COMMA
Rule 39    list -> list factor
Rule 40    factor -> NUMBER
Rule 41    factor -> VARIABLE

Terminals, with rules where they appear

CHOOSE               : 14 28
COMMA                : 34 35 37 38
COMPUTE              : 22 23
DIVIDE               : 9
EXP                  : 10
FACTORIAL            : 13
LBRACKET             : 19 21 25 27
LPAREN               : 14 15 16 17 18 20 22 23 24 26 28 29 33
LSET                 : 30 31 32
MINUS                : 6 7 12
NUMBER               : 40
PERMUTE              : 15 29
PLUS                 : 4 5
Q                    : 16 17
RBRACKET             : 19 21
RPAREN               : 14 15 16 17 18 20 22 23 33
RSET                 : 30 31 32
TIMES                : 8
VARIABLE             : 41
error                : 

Nonterminals, with rules where they appear

expression           : 1 4 6 17 18 19 22 24 25 31 34 35 36
factor               : 2 4 5 5 6 7 7 8 8 9 9 10 10 11 11 12 13 16 20 21 23 26 27 37 38 39
list                 : 3 14 15 28 29 30 33 35 36 38 39
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . expression
    (2) statement -> . factor
    (3) statement -> . list
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . LPAREN expression RPAREN
    (19) factor -> . LBRACKET expression RBRACKET
    (20) factor -> . LPAREN factor RPAREN
    (21) factor -> . LBRACKET factor RBRACKET
    (22) factor -> . COMPUTE LPAREN expression RPAREN
    (23) factor -> . COMPUTE LPAREN factor RPAREN
    (24) factor -> . LPAREN expression
    (25) factor -> . LBRACKET expression
    (26) factor -> . LPAREN factor
    (27) factor -> . LBRACKET factor
    (28) factor -> . CHOOSE LPAREN list
    (29) factor -> . PERMUTE LPAREN list
    (30) factor -> . LSET list RSET
    (31) factor -> . LSET expression RSET
    (32) factor -> . LSET RSET
    (33) factor -> . LPAREN list RPAREN
    (40) factor -> . NUMBER
    (41) factor -> . VARIABLE
    (34) list -> . expression COMMA
    (35) list -> . list expression COMMA
    (36) list -> . list expression
    (37) list -> . factor COMMA
    (38) list -> . list factor COMMA
    (39) list -> . list factor

    MINUS           shift and go to state 3
    CHOOSE          shift and go to state 13
    PERMUTE         shift and go to state 7
    Q               shift and go to state 9
    LPAREN          shift and go to state 10
    LBRACKET        shift and go to state 2
    COMPUTE         shift and go to state 8
    LSET            shift and go to state 4
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 11

    list                           shift and go to state 12
    expression                     shift and go to state 14
    statement                      shift and go to state 5
    factor                         shift and go to state 6

state 1

    (40) factor -> NUMBER .

    TIMES           reduce using rule 40 (factor -> NUMBER .)
    DIVIDE          reduce using rule 40 (factor -> NUMBER .)
    EXP             reduce using rule 40 (factor -> NUMBER .)
    FACTORIAL       reduce using rule 40 (factor -> NUMBER .)
    MINUS           reduce using rule 40 (factor -> NUMBER .)
    CHOOSE          reduce using rule 40 (factor -> NUMBER .)
    PERMUTE         reduce using rule 40 (factor -> NUMBER .)
    Q               reduce using rule 40 (factor -> NUMBER .)
    LPAREN          reduce using rule 40 (factor -> NUMBER .)
    LBRACKET        reduce using rule 40 (factor -> NUMBER .)
    COMPUTE         reduce using rule 40 (factor -> NUMBER .)
    LSET            reduce using rule 40 (factor -> NUMBER .)
    NUMBER          reduce using rule 40 (factor -> NUMBER .)
    VARIABLE        reduce using rule 40 (factor -> NUMBER .)
    COMMA           reduce using rule 40 (factor -> NUMBER .)
    PLUS            reduce using rule 40 (factor -> NUMBER .)
    RBRACKET        reduce using rule 40 (factor -> NUMBER .)
    $end            reduce using rule 40 (factor -> NUMBER .)
    RPAREN          reduce using rule 40 (factor -> NUMBER .)
    RSET            reduce using rule 40 (factor -> NUMBER .)


state 2

    (19) factor -> LBRACKET . expression RBRACKET
    (21) factor -> LBRACKET . factor RBRACKET
    (25) factor -> LBRACKET . expression
    (27) factor -> LBRACKET . factor
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . LPAREN expression RPAREN
    (19) factor -> . LBRACKET expression RBRACKET
    (20) factor -> . LPAREN factor RPAREN
    (21) factor -> . LBRACKET factor RBRACKET
    (22) factor -> . COMPUTE LPAREN expression RPAREN
    (23) factor -> . COMPUTE LPAREN factor RPAREN
    (24) factor -> . LPAREN expression
    (25) factor -> . LBRACKET expression
    (26) factor -> . LPAREN factor
    (27) factor -> . LBRACKET factor
    (28) factor -> . CHOOSE LPAREN list
    (29) factor -> . PERMUTE LPAREN list
    (30) factor -> . LSET list RSET
    (31) factor -> . LSET expression RSET
    (32) factor -> . LSET RSET
    (33) factor -> . LPAREN list RPAREN
    (40) factor -> . NUMBER
    (41) factor -> . VARIABLE

    MINUS           shift and go to state 3
    CHOOSE          shift and go to state 13
    PERMUTE         shift and go to state 7
    Q               shift and go to state 9
    LPAREN          shift and go to state 10
    LBRACKET        shift and go to state 2
    COMPUTE         shift and go to state 8
    LSET            shift and go to state 4
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 11

    expression                     shift and go to state 16
    factor                         shift and go to state 15

state 3

    (12) factor -> MINUS . factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . LPAREN expression RPAREN
    (19) factor -> . LBRACKET expression RBRACKET
    (20) factor -> . LPAREN factor RPAREN
    (21) factor -> . LBRACKET factor RBRACKET
    (22) factor -> . COMPUTE LPAREN expression RPAREN
    (23) factor -> . COMPUTE LPAREN factor RPAREN
    (24) factor -> . LPAREN expression
    (25) factor -> . LBRACKET expression
    (26) factor -> . LPAREN factor
    (27) factor -> . LBRACKET factor
    (28) factor -> . CHOOSE LPAREN list
    (29) factor -> . PERMUTE LPAREN list
    (30) factor -> . LSET list RSET
    (31) factor -> . LSET expression RSET
    (32) factor -> . LSET RSET
    (33) factor -> . LPAREN list RPAREN
    (40) factor -> . NUMBER
    (41) factor -> . VARIABLE

    MINUS           shift and go to state 3
    CHOOSE          shift and go to state 13
    PERMUTE         shift and go to state 7
    Q               shift and go to state 9
    LPAREN          shift and go to state 10
    LBRACKET        shift and go to state 2
    COMPUTE         shift and go to state 8
    LSET            shift and go to state 4
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 11

    factor                         shift and go to state 17

state 4

    (30) factor -> LSET . list RSET
    (31) factor -> LSET . expression RSET
    (32) factor -> LSET . RSET
    (34) list -> . expression COMMA
    (35) list -> . list expression COMMA
    (36) list -> . list expression
    (37) list -> . factor COMMA
    (38) list -> . list factor COMMA
    (39) list -> . list factor
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . LPAREN expression RPAREN
    (19) factor -> . LBRACKET expression RBRACKET
    (20) factor -> . LPAREN factor RPAREN
    (21) factor -> . LBRACKET factor RBRACKET
    (22) factor -> . COMPUTE LPAREN expression RPAREN
    (23) factor -> . COMPUTE LPAREN factor RPAREN
    (24) factor -> . LPAREN expression
    (25) factor -> . LBRACKET expression
    (26) factor -> . LPAREN factor
    (27) factor -> . LBRACKET factor
    (28) factor -> . CHOOSE LPAREN list
    (29) factor -> . PERMUTE LPAREN list
    (30) factor -> . LSET list RSET
    (31) factor -> . LSET expression RSET
    (32) factor -> . LSET RSET
    (33) factor -> . LPAREN list RPAREN
    (40) factor -> . NUMBER
    (41) factor -> . VARIABLE

    RSET            shift and go to state 20
    MINUS           shift and go to state 3
    CHOOSE          shift and go to state 13
    PERMUTE         shift and go to state 7
    Q               shift and go to state 9
    LPAREN          shift and go to state 10
    LBRACKET        shift and go to state 2
    COMPUTE         shift and go to state 8
    LSET            shift and go to state 4
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 11

    expression                     shift and go to state 21
    list                           shift and go to state 19
    factor                         shift and go to state 18

state 5

    (0) S' -> statement .



state 6

    (2) statement -> factor .
    (5) expression -> factor . PLUS factor
    (7) expression -> factor . MINUS factor
    (8) factor -> factor . TIMES factor
    (9) factor -> factor . DIVIDE factor
    (10) factor -> factor . EXP factor
    (11) factor -> factor . factor
    (13) factor -> factor . FACTORIAL
    (37) list -> factor . COMMA
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . LPAREN expression RPAREN
    (19) factor -> . LBRACKET expression RBRACKET
    (20) factor -> . LPAREN factor RPAREN
    (21) factor -> . LBRACKET factor RBRACKET
    (22) factor -> . COMPUTE LPAREN expression RPAREN
    (23) factor -> . COMPUTE LPAREN factor RPAREN
    (24) factor -> . LPAREN expression
    (25) factor -> . LBRACKET expression
    (26) factor -> . LPAREN factor
    (27) factor -> . LBRACKET factor
    (28) factor -> . CHOOSE LPAREN list
    (29) factor -> . PERMUTE LPAREN list
    (30) factor -> . LSET list RSET
    (31) factor -> . LSET expression RSET
    (32) factor -> . LSET RSET
    (33) factor -> . LPAREN list RPAREN
    (40) factor -> . NUMBER
    (41) factor -> . VARIABLE

    $end            reduce using rule 2 (statement -> factor .)
    PLUS            shift and go to state 24
    MINUS           shift and go to state 23
    TIMES           shift and go to state 28
    DIVIDE          shift and go to state 27
    EXP             shift and go to state 22
    FACTORIAL       shift and go to state 29
    COMMA           shift and go to state 26
    CHOOSE          shift and go to state 13
    PERMUTE         shift and go to state 7
    Q               shift and go to state 9
    LPAREN          shift and go to state 10
    LBRACKET        shift and go to state 2
    COMPUTE         shift and go to state 8
    LSET            shift and go to state 4
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 11

    factor                         shift and go to state 25

state 7

    (15) factor -> PERMUTE . LPAREN list RPAREN
    (29) factor -> PERMUTE . LPAREN list

    LPAREN          shift and go to state 30


state 8

    (22) factor -> COMPUTE . LPAREN expression RPAREN
    (23) factor -> COMPUTE . LPAREN factor RPAREN

    LPAREN          shift and go to state 31


state 9

    (16) factor -> Q . LPAREN factor RPAREN
    (17) factor -> Q . LPAREN expression RPAREN

    LPAREN          shift and go to state 32


state 10

    (18) factor -> LPAREN . expression RPAREN
    (20) factor -> LPAREN . factor RPAREN
    (24) factor -> LPAREN . expression
    (26) factor -> LPAREN . factor
    (33) factor -> LPAREN . list RPAREN
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . LPAREN expression RPAREN
    (19) factor -> . LBRACKET expression RBRACKET
    (20) factor -> . LPAREN factor RPAREN
    (21) factor -> . LBRACKET factor RBRACKET
    (22) factor -> . COMPUTE LPAREN expression RPAREN
    (23) factor -> . COMPUTE LPAREN factor RPAREN
    (24) factor -> . LPAREN expression
    (25) factor -> . LBRACKET expression
    (26) factor -> . LPAREN factor
    (27) factor -> . LBRACKET factor
    (28) factor -> . CHOOSE LPAREN list
    (29) factor -> . PERMUTE LPAREN list
    (30) factor -> . LSET list RSET
    (31) factor -> . LSET expression RSET
    (32) factor -> . LSET RSET
    (33) factor -> . LPAREN list RPAREN
    (40) factor -> . NUMBER
    (41) factor -> . VARIABLE
    (34) list -> . expression COMMA
    (35) list -> . list expression COMMA
    (36) list -> . list expression
    (37) list -> . factor COMMA
    (38) list -> . list factor COMMA
    (39) list -> . list factor

    MINUS           shift and go to state 3
    CHOOSE          shift and go to state 13
    PERMUTE         shift and go to state 7
    Q               shift and go to state 9
    LPAREN          shift and go to state 10
    LBRACKET        shift and go to state 2
    COMPUTE         shift and go to state 8
    LSET            shift and go to state 4
    NUMBER          shift and go to state 1
    VARIABLE        shift and go to state 11

    list                           shift and go to state 34
    expression                     shift and go to state 35
    factor                         shift and go to state 33

state 11

    (41) factor -> VARIABLE .

    TIMES           reduce using rule 41 (factor -> VARIABLE .)
    DIVIDE          reduce using rule 41 (factor -> VARIABLE .)
    EXP             reduce using rule 41 (factor -> VARIABLE .)
    FACTORIAL       reduce using rule 41 (factor -> VARIABLE .)
    MINUS           reduce using rule 41 (factor -> VARIABLE .)
    CHOOSE          reduce using rule 41 (factor -> VARIABLE .)
    PERMUTE         reduce using rule 41 (factor -> VARIABLE .)
    Q               reduce using rule 41 (factor -> VARIABLE .)
    LPAREN          reduce using rule 41 (factor -> VARIABLE .)
    LBRACKET        reduce using rule 41 (factor -> VARIABLE .)
    COMPUTE         reduce using rule 41 (factor -> VARIABLE .)
    LSET            reduce using rule 41 (factor -> VARIABLE .)
    NUMBER          reduce using rule 41 (factor -> VARIABLE .)
    VARIABLE        reduce using rule 41 (factor -> VARIABLE .)
    COMMA           reduce using rule 41 (factor -> VARIABLE .)
    PLUS            reduce using rule 41 (factor -> VARIABLE .)
    RBRACKET        reduce using rule 41 (factor -> VARIABLE .)
    $end            reduce using rule 41 (factor -> VARIABLE .)
    RPAREN          reduce using rule 41 (factor -> VARIABLE .)
    RSET            reduce using rule 41 (factor -> VARIABLE .)


state 12

    (3) statement -> list .
    (35) list -> list . expression COMMA
    (36) list -> list . expression
    (38) list -> list . factor COMMA
    (39) list -> list . factor
    (4) expression -> . expression PLUS factor
    (5) expression -> . factor PLUS factor
    (6) expression -> . expression MINUS factor
    (7) expression -> . factor MINUS factor
    (8) factor -> . factor TIMES factor
    (9) factor -> . factor DIVIDE factor
    (10) factor -> . factor EXP factor
    (11) factor -> . factor factor
    (12) factor -> . MINUS factor
    (13) factor -> . factor FACTORIAL
    (14) factor -> . CHOOSE LPAREN list RPAREN
    (15) factor -> . PERMUTE LPAREN list RPAREN
    (16) factor -> . Q LPAREN factor RPAREN
    (17) factor -> . Q LPAREN expression RPAREN
    (18) factor -> . LPAREN expression RPAREN
    (19) factor -> . LBRACKET expression RBRACKET
    (20) factor -> . LPAREN factor RPAREN
    (21) factor -> . LBRACKET factor RBRACKET
    (22) factor -> . COMPUTE LPAREN expression RPAREN
    (23) factor -> . COMPUTE LPAREN factor RPAREN
    (24) factor -> . LPAREN expression
    (25) factor -> . LBRACKET expression
    (26) factor -> . LPAREN factor
    (27) factor -> . LBRACKET factor
    (28) factor -> . CHOOSE LPAREN list
    (29) factor -> . PERMUTE LPAREN list
    (30) factor -> . LSET list RSET
    (31) factor -> . LSET expression RSET
    (32) factor -> . LSET RSET
    (33) factor -> . LPAREN list RPAREN
    (40) factor -> . NUMBER
    (41) factor -> . VARIABLE
